--- a/a6.html
+++ b/a6.html
@@ -24,6 +24,16 @@
         $('#slider').nivoSlider();
     });
     </script>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T2H5QSTLDD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T2H5QSTLDD');
+</script>
 </head>
 
 <body>
