--- a/a5.html
+++ b/a5.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>111570012王雅盈</title>
-  <meta name="description" content="free website template" />
-  <meta name="keywords" content="enter your keywords here" />
+  <meta name="description" content="這是王雅盈作業11，包含程式碼和相關說明。" />
+  <meta name="keywords" content="王雅盈,作業11,CSS,GA" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <script type="text/javascript" src="js/jquery.min.js"></script>
@@ -41,10 +41,10 @@
 	<div id="menubar">
       <ul class="lavaLampWithImage" id="lava_menu">
         <li class="current"><a href="index.html">首頁</a></li>
-        <li><a href="a1.html">第一題</a></li>
-        <li><a href="a2.html">第二題</a></li>
-        <li><a href="a3.html">第三題</a></li>
-        <li><a href="a4.html">第四題</a></li>
+        <li><a href="a1.html">第1題</a></li>
+        <li><a href="a2.html">第2題</a></li>
+        <li><a href="a3.html">第3題</a></li>
+        <li><a href="a4.html">第4題</a></li>
         <li><a href="a5.html">GSC圖片</a></li>
         <li><a href="a6.html">GA圖片</a></li>
       </ul>
@@ -67,8 +67,24 @@
 		</div><!--close slider-wrapper-->
 	  </div><!--close banner_image-->			  
       <div id="content">
-        <div class="content_item">
-          <h1>Welcome to your website</h1>
+        <div class="content_item">GSC圖片
+          </p>
+          <hr>
+          <p>
+              <img src="images/gsc-1.png" width="80%">
+              <h2>圖1：網站認證</h2>
+          </p>
+          <p>
+              <img src="images/gsc-2.png" width="80%">
+              <h2>圖2：SiteMap認證</h2>
+          </p>
+          <p>
+              <img src="images/gsc-3.png" width="80%">
+              <h2>圖3：網址審查</h2>
+          </p>
+          
+
+
           <p>This standards compliant, simple, fixed width website template is released as an 'open source' design (under the Creative Commons Attribution 3.0 Licence), which means that you are free to download and use it for anything you want (including modifying and amending it). If you wish to remove the 'ARaynorDesign' link in the footer of the template, please contact me first, but other than that...</p>
           <h3>Place your heading here</h3>
           <div style="width:200px; float:left; padding: 0px 20px 10px 0px;"><img alt="image" src="images/image.jpg" /></div>
@@ -109,8 +125,7 @@
     </div><!--close site_content-->	
     <div id="footer">  
 	  <div id="footer_content">
-        版權所有，&copy; designed by <a href="index.html">王雅盈</a>，2024
-      </div><!--close footer_content-->	
+      版權所有，&copy; designed by <a href="index.html">王雅盈</a>，2024      </div><!--close footer_content-->	
     </div><!--close footer-->	
   </div><!--close main-->	
 </body>
