--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>111570012王雅盈</title>
-  <meta name="description" content="free website template" />
-  <meta name="keywords" content="enter your keywords here" />
+  <meta name="description" content="這是王雅盈作業11，包含程式碼和相關說明。" />
+  <meta name="keywords" content="王雅盈,作業11,CSS,GA" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <script type="text/javascript" src="js/jquery.min.js"></script>
