--- a/a6.html
+++ b/a6.html
@@ -101,6 +101,7 @@
           </h2>
           </p>
           <p>
+            <img src="images/ga-3.png" width="80%">
             <h2>
               圖4：GA4的重要轉換事件(Important Event， Conversion)
           </h2>
